--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "ion-rangeslider": "^2.3.1",
     "jquery": "^3.5.1",
     "loading-attribute-polyfill": "^1.5.4",
+    "scrollbooster": "^3.0.2",
     "swiper": "^6.8.4"
   }
 }
