--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "jquery": "^3.5.1",
     "loading-attribute-polyfill": "^1.5.4",
     "scrollbooster": "^3.0.2",
-    "swiper": "^6.8.4"
+    "swiper": "^6.8.4",
+    "tippy.js": "^6.3.2"
   }
 }
