--- a/package.json
+++ b/package.json
@@ -12,15 +12,16 @@
   "license": "ISC",
   "devDependencies": {
     "autoprefixer": "^10.4.0",
+    "bootstrap": "^5.1.3",
     "browser-sync": "^2.27.7",
     "browserslist": "^4.18.1",
+    "browsersync-ssi": "^0.2.4",
     "colors": "^1.4.0",
-    "bootstrap": "^5.1.3",
     "cssnano": "^5.0.11",
     "del": "^6.0.0",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
-    "gulp-cheerio": "^1.0.0", 
+    "gulp-cheerio": "^1.0.0",
     "gulp-newer": "^1.4.0",
     "gulp-notify": "^4.0.0",
     "gulp-npm-dist": "^1.0.3",
@@ -41,11 +42,11 @@
     "postcss-scss": "^4.0.2",
     "postcss-sort-media-queries": "^4.1.0",
     "postcss-syntax": "^0.36.2",
-    "browsersync-ssi": "^0.2.4",
     "sass": "^1.43.4"
   },
   "dependencies": {
     "@fancyapps/ui": "^4.0.9",
+    "hc-sticky": "^2.2.7",
     "inputmask": "^5.0.6",
     "ion-rangeslider": "^2.3.1",
     "jquery": "^3.6.0",
